--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "private": true,
   "theme": {
-      "primary-color": "#0073b3",
-      "layout-body-background":"red"
+    "primary-color": "#0073b3",
+    "layout-body-background": "red"
   },
   "scripts": {
     "start": "webpack-dev-server --config ./scripts/webpack.dev.config.js",
@@ -75,18 +75,21 @@
     "classnames": "^2.2.5"
   },
   "dependencies": {
+    "@antv/g2": "^3.0.5-beta.6",
     "antd": "^3.1.3",
     "babel-polyfill": "~6.26.0",
     "draft-js": "^0.10.3",
-    "echarts": "4.0.2",
+    "echarts": "^4.0.2",
+    "echarts-for-react": "^1.1.5",
     "immutable": "~3.8.1",
     "isomorphic-fetch": "~2.2.1",
     "moment": "~2.20.1",
+    "mqtt": "^2.14.0",
     "rc-queue-anim": "^1.4.1",
     "rc-tween-one": "~1.7.3",
-    "echarts-for-react": "^1.1.5",
     "react": "^v15.1.0",
     "react-copy-to-clipboard": "~5.0.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^15.1.0",
     "react-redux": "~5.0.6",
     "react-router": "3.2.0",
@@ -94,7 +97,6 @@
     "redux": "~3.7.2",
     "redux-actions": "~2.2.1",
     "redux-thunk": "~2.2.0",
-    "webpack": "~3.10.0",
-    "mqtt": "^2.14.0"
+    "webpack": "~3.10.0"
   }
 }
