--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "isomorphic-fetch": "~2.2.1",
     "moment": "~2.20.1",
     "mqtt": "^2.14.0",
+    "prop-types": "^15.6.1",
     "rc-queue-anim": "^1.4.1",
     "rc-tween-one": "~1.7.3",
     "react": "^v15.1.0",
